# LocalRAG

./: .env.example  .gitignore  .gitignore-guide.md  .pre-commit-config.yaml  BASIC_UI.md  CLAUDE.md  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.streamlit  IMPROVEMENT_SUMMARY.md  PRD_ASK.md  PRD_DOCKER_DEPLOY_ENV.md  PRD_EVALRUN.md  PRD_FEEDBACK.md  PRD_INGEST.md  PRD_LOGGING_MONITORING.md  PROJECT_INFO.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  simple_localrag.py  test_eval_cases.jsonl  test_improvements.py  test_questions_helpzen.md  test_ui.py
.github/workflows/: pre-commit.yml
app/: main.py
app/api/: ask.py  evaluation.py  feedback.py  health.py  ingest.py
app/core/: config.py  logging.py  middleware.py
app/services/: chunking.py  document_parser.py  embeddings.py  evaluation.py  llm.py  reranker.py  search.py
docs/: code-quality-analysis.md  legacy-code-fixes.md  markdown-files-guide.md
scripts/: entrypoint.sh  init-db.sql  start.sh
tests/unit/: test_sample.py
ui/: main.py
